# discord-qotd

./: .gitignore  Cargo.toml
src/: bot.rs  main.rs
