[package]
name = "qotd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
isahc = "1.6.0"
paw = "1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.10.9"
structopt = { version = "0.3.25", features = ["paw"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
